--- a/apps/electron/layers/main/tsconfig.json
+++ b/apps/electron/layers/main/tsconfig.json
@@ -11,5 +11,5 @@
 
     "types": ["node"]
   },
-  "include": ["src/**/*.ts", "../../types/**/*.d.ts"]
+  "include": ["src/**/*.ts", "../../types/**/*.d.ts", "index.ts"]
 }
