--- a/.github/workflows/client-app.yml
+++ b/.github/workflows/client-app.yml
@@ -31,7 +31,7 @@ concurrency:
 
 jobs:
   before-make:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
