--- a/.github/workflows/client-app.yml
+++ b/.github/workflows/client-app.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: pnpm/action-setup@v2
       - uses: actions/setup-node@v3
         with:
-          node-version-file: '.nvmrc'
+          node-version: 18
           cache: 'pnpm'
 
       - name: before-make
