--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,9 +6,6 @@ on:
   pull_request:
     branches: [master]
 
-permissions:
-  packages: read
-
 # Cancels all previous workflow runs for pull requests that have not completed.
 # See https://docs.github.com/en/actions/using-jobs/using-concurrency
 concurrency:
@@ -69,6 +66,9 @@ jobs:
   e2e-test:
     name: E2E Test
     runs-on: ubuntu-latest
+    permissions:
+      packages: read
+      contents: read
     strategy:
       fail-fast: false
       matrix:
