--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
     needs: build
     services:
       octobase:
-        image: toeverything/cloud:nightly-latest
+        image: ghcr.io/toeverything/cloud:nightly-latest
         ports:
           - 3000:3000
         env:
