fix: use container

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,18 +74,17 @@ jobs:
     needs: build
     permissions:
       packages: read
-    services:
-      octobase:
-        image: ghcr.io/toeverything/cloud:nightly-latest
-        ports:
-          - 3000:3000
-        env:
-          SIGN_KEY: 'test123'
-          RUST_LOG: 'debug'
-          JWST_DEV: '1'
-        credentials:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+    container:
+      image: ghcr.io/toeverything/cloud:nightly-latest
+      ports:
+        - 3000:3000
+      env:
+        SIGN_KEY: 'test123'
+        RUST_LOG: 'debug'
+        JWST_DEV: '1'
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - uses: actions/checkout@v3
